# ci-cd

./: .commitlintrc.yaml  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yaml
