[tool.poetry]
name = "ci-cd"
version = "0.1.0"
description = "Repository for CI/CD practice"
authors = ["Niral Koradia <koradiya.niral@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10.6"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
